feat: 补充仓库地址

--- a/packages/popup/package.json
+++ b/packages/popup/package.json
@@ -16,6 +16,10 @@
     "README.md"
   ],
   "sideEffects": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Suruis/vue-functional-popup.git"
+  },
   "scripts": {
     "build": "rollup -c rollup.config.mjs"
   },
