--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.36.0",
     "lint-staged": "^13.2.0",
